Made the clipping region that hides energy chunks behind blocks NOT do so when the block is beneath the beaker.
Changed the energy chunk distribution algorithm to fill up the water more quickly when something is dropped into the beaker.
Tweaked value at which a multi-body system is allowed to exchange energy with the air.
# 0.00.09 (65510) Jun 28, 2012
6/28/12 Deploying snapshot to dev for testing and review.
Made energy chunks exchanged between the liquid in the beaker and blocks immersed in the liquid only use visible chunks.
Changed caption for the speed control from "Normal Speed" to simply "Normal".
Added the "sticky thermometer" feature.
Made the energy chunks in the beaker appear to be behind the blocks when the blocks are placed in the beaker.
# 0.00.08 (65232) Jun 18, 2012
6/18/12 Deploying to dev to capture a snapshot before some significant refactoring.
Added back lines to the blocks.  These only show up when block is transparent.
Fixed an issue where heat/cool limits weren't being cleared if an object remained on the burner after the burner was turned off.
Made extraction of energy chunks work well in conjunction with the layering effect.
Added layers where the energy chunks reside in order to allow them to look more 3D in their positions.
Made energy chunks wander more as the move upwards through the air.
Made animation faster for burner turning off.
# 0.00.07 (65076) Jun 14, 2012
6/14/12 Snapshot of a version with incorrect, but interesting, behavior.
# 0.00.06 (65042) Jun 13, 2012
6/13/12 Capturing a snapshot for review and discussion with design team.
Added fading for energy chunks in order to give them more of a 3D look in the energy containers.
Changed algorithm for positioning energy chunks in the energy containers so that they can go into the 3D projection areas.
Animated turn off of the burner when heating/cooling limits are hit.
E's come from top center of objects when going into the air.
Improved energy chunk exchange behavior with air